# ocr_chinese

./: .gitignore  OCR项目文档2.md  dependency-analysis.txt  grid_seg_pdf_full_batch_row_no_double.ipynb  main.py  pyproject.toml  system-python-packages.txt
sample/: IMG_7659(1).HEIC  IMG_7660(1).HEIC
scripts/: deskew_experiment.ipynb  formal_pdf_ocr.ipynb  formal_pdf_ocr_result.csv  formal_pdf_ocr_text.txt  grid_seg.ipynb  grid_seg_fix.ipynb  grid_seg_fix_pdf.ipynb  grid_seg_pdf_single_page_debug_algo_row_no_double.ipynb  grid_seg_pdf_single_page_fixed_v3.ipynb  grid_seg_pdf_single_page_interleaved_with_halfauto_switch.ipynb  grid_seg_pdf_single_page_with_split.ipynb  mlp_chinese.py  paddle_ocr_demo.ipynb
