[project]
name = "paddle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "img2pdf>=0.6.3",
    "nbformat>=5.10.4",
    "ocrmypdf==14.3.0",
    "opencv-python-headless>=4.13.0.92",
    "pdf2image>=1.17.0",
    "pikepdf==8.0.0",
    "pymupdf>=1.27.2.2",
    "scikit-image>=0.24.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.3",
]
